--- a/serverless.yml
+++ b/serverless.yml
@@ -43,11 +43,11 @@ resources:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: todo
+          - AttributeName: todoId
             AttributeType: S
         KeySchema:
           - AttributeName: todoId
-            KeyType: S
+            KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
