--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
